Fixing job post alignment

--- a/css/bctechjobs.css
+++ b/css/bctechjobs.css
@@ -163,8 +163,9 @@ input {
 .form-dataentry input[type=email],
 .form-dataentry select {
   border: 0;
-  padding: 8px 15px;
+  padding: 0 15px;
   width: 100%;
+  height: 48px;
   border-radius: 5px;
   color: #414141;
   position: relative;
@@ -190,6 +191,9 @@ input {
 }
 #select2-drop {
   z-index: 500000;
+}
+.form-group .col-xs-12.col-sm-6.twocols-col1.xs-p0.flex-pt6 .select2-container {
+  margin-top: 18px;
 }
 .search-results-subcontent input,
 .search-results-subcontent .select2-container .select2-choice,
